<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mylayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#595959"
            android:orientation="horizontal"
            android:paddingBottom="4dp">

            <TextView
                android:id="@+id/tw_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:background="#303030"
                android:layout_weight="1"

                android:text="@string/name"
                android:textAlignment="center"

                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tw_position"
                android:layout_width="0dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:background="#303030"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/position"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tw_duration"
                android:layout_width="0dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:background="#303030"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/duration"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tw_action"
                android:layout_width="0dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:background="#303030"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/action"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>